tests/paczka1/small_fuzzy/58431014.err
Error in line 6: rRn9p S661 84,1
Error in line 10: 97KTRL75p A696 30,5
Error in line 14: 97KTRL75p S770 18,43
Error in line 13: WkdmifThs5 A696 44,8
